T2 provisional casi final y actualizacion de notas.

--- a/MN/Tareas/T1/Tarea1.ipynb
+++ b/MN/Tareas/T1/Tarea1.ipynb
@@ -21,6 +21,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "heading_collapsed": true,
     "hidden": true
    },
    "source": [
@@ -488,14 +489,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-06T05:39:41.859334Z",
-     "start_time": "2020-09-06T05:39:41.108031Z"
+     "end_time": "2020-09-13T04:52:39.951408Z",
+     "start_time": "2020-09-13T04:52:39.940256Z"
     },
     "code_folding": [
-     0,
      8,
      27,
      33
