--- a/MN/Tareas/T1/Tarea1.tex
+++ b/MN/Tareas/T1/Tarea1.tex
@@ -360,6 +360,7 @@
       }
     % Slightly bigger margins than the latex defaults
     
+    \usepackage[spanish]{babel}
     \geometry{verbose,tmargin=0.7in,bmargin=0.7in,lmargin=0.5in,rmargin=2.4in}
     
     
