--- a/MN/Tareas/Test.ipynb
+++ b/MN/Tareas/Test.ipynb
@@ -2,37 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-09-05T19:17:40.718947Z",
-     "start_time": "2020-09-05T19:17:40.702139Z"
-    }
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f=sqrt(2) - 1,  g=1/(sqrt(2) + 1)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
-       "5.015625"
+       "False"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def mantissa(binario, norm=True):\n",
-    "    binario = binario.split('b')[-1]\n",
-    "    decimal = 1.0 if norm else 0.0\n",
+    "var('x')\n",
     "\n",
-    "    for n in range(len(binario)):\n",
-    "        if binario[n] == '1':\n",
-    "            decimal += 1*(2**(-n-1))\n",
+    "f = x(sqrt(x+1)-sqrt(x))\n",
+    "g = x/(sqrt(x+1)+sqrt(x))\n",
     "\n",
-    "    return decimal\n",
-    "\n",
-    "mantissa('01000000')*2**2 + mantissa('00000001', False)*2**2"
+    "print(f'f={f(1)},  g={g(1)}')\n",
+    "bool(f(1) < g(1))"
    ]
   },
   {
@@ -46,9 +44,9 @@
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "MN-env",
-   "language": "python",
-   "name": "mn-env"
+   "display_name": "SageMath 9.0",
+   "language": "sage",
+   "name": "sagemath"
   },
   "language_info": {
    "codemirror_mode": {
@@ -60,7 +58,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
