Final de Tarea2 de MN

--- a/MN/Tareas/T2/Tarea2.ipynb
+++ b/MN/Tareas/T2/Tarea2.ipynb
@@ -36,28 +36,25 @@
     "\n",
     "#### Si todo sale mal\n",
     "\n",
+    "<a href=\"https://colab.research.google.com/gist/BenchHPZ/5079d3b77ed0de33f82807bf61345b25/tarea2.ipynb\">\n",
+    "    <img src=\"../../../assets/colab-badge.svg\" \n",
+    "         alt=\"Open In Colab\"/>\n",
+    "</a>\n",
+    "\n",
     "En caso de que todo salga mal, tratare de dejar una copia disponible en __GoogleColab__ que se pueda ejecutar con la versión de __Python__ de _GoogleColab_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-13T19:35:42.077128Z",
-     "start_time": "2020-09-13T19:35:42.047152Z"
+     "end_time": "2020-09-13T23:46:35.839256Z",
+     "start_time": "2020-09-13T23:46:33.386Z"
     },
     "init_cell": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ")= ... =(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "\n",
@@ -66,7 +63,7 @@
     "import warnings\n",
     "\n",
     "from math import atan, cos, exp, log, pi, sin\n",
-    "\n",
+    "\"\"\"\n",
     "# Para probar que todo sale bien\n",
     "if __name__ == \"__main__\":\n",
     "    import doctest\n",
@@ -84,7 +81,9 @@
     "        elif ejercicio == 'ejercicio5':\n",
     "            print(Ejercicio5())\n",
     "        else:\n",
-    "            print(')= ... =(')"
+    "            print(')= ... =(')\n",
+    "\"\"\"\n",
+    "print(\"Todo bien con la importacion xD\")"
    ]
   },
   {
@@ -139,11 +138,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-13T19:35:42.342249Z",
-     "start_time": "2020-09-13T19:35:42.330280Z"
+     "end_time": "2020-09-13T23:46:32.648382Z",
+     "start_time": "2020-09-13T23:46:32.482819Z"
     },
     "code_folding": [
      0,
@@ -315,11 +314,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-13T19:35:42.719991Z",
-     "start_time": "2020-09-13T19:35:42.705400Z"
+     "end_time": "2020-09-13T23:46:35.840823Z",
+     "start_time": "2020-09-13T23:46:33.394Z"
     },
     "code_folding": [
      1,
@@ -424,16 +423,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-13T19:35:42.994894Z",
-     "start_time": "2020-09-13T19:35:42.723231Z"
+     "end_time": "2020-09-13T23:46:34.105258Z",
+     "start_time": "2020-09-13T23:46:33.519599Z"
     },
     "code_folding": [
      6
-    ],
-    "collapsed": true
+    ]
    },
    "outputs": [
     {
@@ -605,11 +603,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-13T19:35:43.094172Z",
-     "start_time": "2020-09-13T19:35:43.002938Z"
+     "end_time": "2020-09-13T23:46:35.841801Z",
+     "start_time": "2020-09-13T23:46:33.400Z"
     },
     "code_folding": [
      1,
@@ -678,11 +676,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-13T19:35:44.453906Z",
-     "start_time": "2020-09-13T19:35:43.097930Z"
+     "end_time": "2020-09-13T23:46:35.058214Z",
+     "start_time": "2020-09-13T23:46:34.447950Z"
     },
     "code_folding": []
    },
@@ -698,6 +696,16 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[-2.5000000000005103, 2.666666666666667, 3.9999999999994396, 4.000000000000094]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -786,11 +794,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-13T19:35:44.460143Z",
-     "start_time": "2020-09-13T19:35:44.455774Z"
+     "end_time": "2020-09-13T23:46:35.842917Z",
+     "start_time": "2020-09-13T23:46:33.402Z"
     },
     "code_folding": [
      4,
@@ -829,11 +837,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-13T19:35:44.546493Z",
-     "start_time": "2020-09-13T19:35:44.463100Z"
+     "end_time": "2020-09-13T23:46:35.554206Z",
+     "start_time": "2020-09-13T23:46:35.066313Z"
     },
     "code_folding": [
      1
@@ -949,11 +957,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-13T19:35:44.665468Z",
-     "start_time": "2020-09-13T19:35:44.552393Z"
+     "end_time": "2020-09-13T23:46:35.672677Z",
+     "start_time": "2020-09-13T23:46:35.555759Z"
     },
     "code_folding": [
      2,
@@ -1004,6 +1012,13 @@
     "\n",
     "![Evidencia Ejecucion](assets/E5-1.png)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1091,7 +1106,7 @@
     "instance",
     "_Feature"
    ],
-   "window_display": true
+   "window_display": false
   }
  },
  "nbformat": 4,
