--- a/MN/Tareas/T2/Tarea2.tex
+++ b/MN/Tareas/T2/Tarea2.tex
@@ -411,9 +411,7 @@
 	\hypertarget{si-todo-sale-mal}{%
 	\paragraph{Si todo sale mal}\label{si-todo-sale-mal}}
 
-	En caso de que todo salga mal, tratare de dejar una copia disponible en
-	\textbf{GoogleColab} que se pueda ejecutar con la versión de
-	\textbf{Python} de \emph{GoogleColab}
+	En caso de que todo salga mal se puede ejecutar esta version modificada para python6 en	 \href{https://colab.research.google.com/gist/BenchHPZ/5079d3b77ed0de33f82807bf61345b25/tarea2.ipynb}{Google Colab}
 
 		\begin{tcolorbox}[breakable, size=fbox, boxrule=1pt, pad at break*=1mm,colback=cellbackground, colframe=cellborder]
 	\prompt{In}{incolor}{69}{\boxspacing}
@@ -561,9 +559,6 @@
 
 		\hypertarget{como-ejecutar}{%
 	\subsubsection{Como ejecutar}\label{como-ejecutar}}
-
-		Este ejercicio no tendra implementaci\'on en \textbf{GoogleColab} porque
-	no se requiere correr directamente.
 
 	Para ejecutar este ejercicio en \textbf{consola} es importante ubicarse
 	en la misma carpeta del
@@ -795,8 +790,6 @@
 		\hypertarget{como-ejecutar}{%
 	\subsubsection{Como ejecutar}\label{como-ejecutar}}
 
-		\href{https://colab.research.google.com/gist/BenchHPZ/.../---.ipynb}{GoogleColab}
-
 	Para ejecutar este ejercicio en \textbf{consola} es importante ubicarse
 	en la misma carpeta del
 	\href{https://github.com/BenchHPZ/UG-Compu/blob/master/MN/Tareas/T2/Tarea2.py}{archivo
@@ -897,8 +890,6 @@
 		{ \hspace*{\fill} \\}		
 		\hypertarget{como-ejecutar}{%
 	\subsubsection{Como ejecutar}\label{como-ejecutar}}
-
-		\href{https://colab.research.google.com/gist/BenchHPZ/.../---.ipynb}{GoogleColab}
 
 	Para ejecutar este ejercicio en \textbf{consola} es importante ubicarse
 	en la misma carpeta del
@@ -1082,8 +1073,6 @@ Ep=6020.705109125281 | Ed=6716.752874460997
 
     \hypertarget{ejercicio-5}{%
 \subsubsection{Ejercicio 5}\label{ejercicio-5}}
-
-    \href{https://colab.research.google.com/gist/BenchHPZ/.../---.ipynb}{GoogleColab}
 
 Para ejecutar este ejercicio en \textbf{consola} es importante ubicarse
 en la misma carpeta del
