Avance en tarea 3 y notas

--- a/MN/Tareas/T2/Tarea2.ipynb
+++ b/MN/Tareas/T2/Tarea2.ipynb
@@ -46,15 +46,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-13T23:46:35.839256Z",
-     "start_time": "2020-09-13T23:46:33.386Z"
+     "end_time": "2020-09-18T04:13:58.842582Z",
+     "start_time": "2020-09-18T04:13:55.021936Z"
     },
     "init_cell": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Todo bien con la importacion xD\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "\n",
@@ -314,11 +322,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-13T23:46:35.840823Z",
-     "start_time": "2020-09-13T23:46:33.394Z"
+     "end_time": "2020-09-18T04:13:58.862710Z",
+     "start_time": "2020-09-18T04:13:58.846637Z"
     },
     "code_folding": [
      1,
@@ -603,11 +611,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-13T23:46:35.841801Z",
-     "start_time": "2020-09-13T23:46:33.400Z"
+     "end_time": "2020-09-18T04:13:58.984601Z",
+     "start_time": "2020-09-18T04:13:58.865407Z"
     },
     "code_folding": [
      1,
@@ -794,11 +802,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-13T23:46:35.842917Z",
-     "start_time": "2020-09-13T23:46:33.402Z"
+     "end_time": "2020-09-18T04:13:59.071388Z",
+     "start_time": "2020-09-18T04:13:58.987422Z"
     },
     "code_folding": [
      4,
