Tentativo final para tarea3 de MN

--- a/MN/Tareas/T3/Tarea3.ipynb
+++ b/MN/Tareas/T3/Tarea3.ipynb
@@ -11,18 +11,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Como ejecutar"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "##### Requerimientos\n",
     "\n",
@@ -50,13 +46,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-20T05:39:10.636638Z",
-     "start_time": "2020-09-20T05:39:10.265766Z"
+     "end_time": "2020-09-20T19:54:59.540220Z",
+     "start_time": "2020-09-20T19:54:59.532412Z"
     },
-    "hidden": true,
     "init_cell": true
    },
    "outputs": [
@@ -77,7 +72,7 @@
     "notebook = True\n",
     "\n",
     "\n",
-    "# Para probar que todo sale bien\n",
+    "\n",
     "if __name__ == \"__main__\" and not notebook:\n",
     "    import doctest\n",
     "    doctest.testmod()\n",
@@ -86,9 +81,9 @@
     "        ejercicio = sys.argv[1].lower()\n",
     "\n",
     "        if ejercicio == 'ejercicio2':\n",
-    "            print(Ejercicio1( sys.argv[2], sys.argv[3]))\n",
+    "            print(Ejercicio2( sys.argv[2], sys.argv[3]))\n",
     "        elif ejercicio == 'ejercicio3':\n",
-    "            print(Ejercicio3())\n",
+    "            print(Ejercicio3( sys.argv[2], sys.argv[3]))\n",
     "        else:\n",
     "            print(')= ... =(')\n",
     "\n",
@@ -98,31 +93,78 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Ejercicio 1"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "### .\n",
+    "\n",
+    "Muestre que la inversa de $L_k$ es $L^{-1}_k = I + l_ke_k^T$. Asi, la inversa de una matriz triangular inferior elemental es otra matriz triangular inferior elemental. "
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "Sabemos que, si la matriz es invertible, entonces $L_kL_k^{-1} = I$. \n",
+    "\n",
+    "Procedemos por contradiccion. Supongamos que $L^{-1}_k \\neq I + l_ke_k^T$, de manera que $L_k(I + l_ke_k^T) \\neq I$; si desarrolamos lo anterior resulta que\n",
+    "\n",
+    "\\begin{eqnarray*}\n",
+    "    L_k(I + l_ke_k^T) &\\neq& I \\\\\n",
+    "    (I - l_ke_k^T)(I + l_ke_k^T) &\\neq& I \\\\\n",
+    "    I^2 - (l_ke_k^T)^2 &\\neq& I \\\\\n",
+    "    I - (l_ke_k^T)^2 &\\neq& I \\\\ \n",
+    "\\end{eqnarray*}\n",
+    "\n",
+    "lo cual es cierto siempre que $(l_ke_k^T)^2 \\neq \\bar{0}$. Sin embargo, por la manera en que estan definidas $l_ke_k^T$, $(l_ke_k^T)^2 = 0$. Por lo que llegamos auna contradicion y $L^{-1}_k = I + l_ke_k^T$.\n"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "### .\n",
+    "\n",
+    "Muestre que $L^{-1}_{k-1}L^{-1}_k = I + l_{k-1}e^T_k + l_ke^t_k$ y con esto demostrar que \n",
+    "\n",
+    "\\begin{equation*} L = L^{-1}_1 L^{-1}_2 \\dots L^{-1}_{n-1} = I + \\sum_{k=1}^{n-1}l_ke_k^T\n",
+    "\\end{equation*}\n",
+    "\n",
+    "por lo que $L$ es una matriz triangular inferior con 1's en la diagonal\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "\\textbf{Parte 1} Por definicion y el punto anterior\n",
+    "\n",
+    "\\begin{eqnarray*}\n",
+    "    L_{k-1}^{-1}L_{k}^{-1} &=& (I + l_{k-1}e_{k-1}^T)(I + l_ke_k^T) \\\\\n",
+    "        &=& I^2 + l_{k-1}e_{k-1}^T(l_ke_k^T) + l_{k-1}e_{k-1}^T + l_ke_k^T \\\\\n",
+    "        &&\\text{y como sabemos que la multiplicacion de las submatrices $l,e$ es 0} \\\\\n",
+    "        &=& I + \\bar{0} + l_{k-1}e_{k-1}^T + l_ke_k^T \\\\\n",
+    "        &=& I + l_{k-1}e_{k-1}^T + l_ke_k^T \n",
+    "\\end{eqnarray*}\n",
+    "\n",
+    "\\textbf{Parte 2} ..."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -136,8 +178,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-20T05:39:11.493386Z",
-     "start_time": "2020-09-20T05:39:10.638796Z"
+     "end_time": "2020-09-20T16:11:26.804017Z",
+     "start_time": "2020-09-20T16:11:26.794668Z"
     },
     "code_folding": [
      0,
@@ -189,12 +231,10 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-20T05:39:12.216107Z",
-     "start_time": "2020-09-20T05:39:11.500810Z"
+     "end_time": "2020-09-20T16:11:26.875687Z",
+     "start_time": "2020-09-20T16:11:26.809061Z"
     },
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -215,7 +255,7 @@
     "            matrix([[3.],\n",
     "                    [4.]])\n",
     "    \"\"\"\n",
-    "    # verificamos sea matriz cuadrada\n",
+    "\n",
     "    if len(L) == b.size:\n",
     "        n = len(L)\n",
     "        # verificamos que la matriz tenga solucion\n",
@@ -227,7 +267,8 @@
     "        x = np.zeros((n), dtype=dtype)\n",
     "        for i in range(n):\n",
     "            x[i] = (b[0,i] - np.sum([L[i,j]*x[j] for j in range(i-1)],\n",
-    "                                    dtype=dtype))/L[i,i]\n",
+    "                                    dtype=dtype)\n",
+    "                   )/L[i,i]\n",
     "\n",
     "        return np.asmatrix(x, dtype=dtype).transpose()\n",
     "    \n",
@@ -241,8 +282,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-20T05:39:13.146256Z",
-     "start_time": "2020-09-20T05:39:12.220495Z"
+     "end_time": "2020-09-20T16:11:27.168524Z",
+     "start_time": "2020-09-20T16:11:26.878491Z"
     },
     "code_folding": [
      0,
@@ -334,8 +375,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
+    "#### Como ejecutar\n",
+    "Para ejecutar en consola se necesita estar en el mismo directorio que la carpeta de la tarea `datos`. Como nombre de los archivos no se espera la direccion completa ni la extension del archivo. Se infiere automatincamente que los datos sera obtenidos del subdirectorio `datos/npy` y con la extension `.npy`. De manera qu la ejecucion debe parecerse a lo siguiente\n",
+    "```console\n",
+    "python3 Tarea3.py Ejercicio2 matL5 vecb5\n",
+    "```\n",
+    "lo que debe producir la salida\n",
+    "\n",
+    "![Ejemplo ejecucion consola](assets/T3-E2.png)\n",
+    "\n",
+    "#### Otros\n",
     "[Norma de Numpy](https://numpy.org/doc/stable/reference/generated/numpy.linalg.norm.html)"
    ]
   },
@@ -351,18 +404,16 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-20T05:39:13.529856Z",
-     "start_time": "2020-09-20T05:39:13.148597Z"
+     "end_time": "2020-09-20T16:11:27.182070Z",
+     "start_time": "2020-09-20T16:11:27.171442Z"
     },
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
     "def backwardSubstitution( U, n, b, t,/,dtype=np.float64):\n",
     "    \"\"\" Funcion que implementa el metodo desustitucion pa_\n",
-    "    ra adelante dada una matriz triangular inferior.\n",
+    "    ra atras dada una matriz triangular inferior.\n",
     "        Input:\n",
     "            U := apuntador a la matriz U\n",
     "            n := tamanio de la matriz U\n",
@@ -373,9 +424,10 @@
     "                None en caso de que hay habido algun error\n",
     "                \n",
     "    \"\"\"\n",
-    "    # verificamos sea matriz cuadrada\n",
+    "    \n",
     "    if len(U) == b.size:\n",
     "        n = len(U)\n",
+    "        \n",
     "        # verificamos que la matriz tenga solucion\n",
     "        for i in range(n):\n",
     "            if abs(U[i,i]) <= t:\n",
@@ -383,31 +435,27 @@
     "                return None\n",
     "        \n",
     "        x = np.zeros((n), dtype=dtype)\n",
-    "        for i in range(n):\n",
-    "            x[i] = (b[0,i] - sum(U[i,j]*x[j] for j in range(i, n)))/U[i,i]\n",
-    "            if abs(x[i]) <= t:\n",
-    "                print('Err: valor muy cercano a 0')\n",
-    "                return None\n",
+    "        for i in range(n-1, -1, -1):\n",
+    "            x[i] = (b[0,i] - np.sum([U[i,j]*x[j] for j in range(i+1-1, n)],\n",
+    "                                    dtype=dtype)\n",
+    "                   )/U[i,i]\n",
     "\n",
     "        return np.asmatrix(x, dtype=dtype).transpose()\n",
     "    \n",
     "    else:\n",
     "        print(\"Err: dimensiones\")\n",
-    "        return None"
+    "        return None\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-20T05:39:13.825040Z",
-     "start_time": "2020-09-20T05:39:13.537458Z"
+     "end_time": "2020-09-20T16:13:53.636328Z",
+     "start_time": "2020-09-20T16:13:53.448293Z"
     },
-    "code_folding": [
-     0,
-     22
-    ]
+    "code_folding": []
    },
    "outputs": [
     {
@@ -421,39 +469,39 @@
       "\n",
       "\n",
       "50 50\n",
-      "[-1.01801394]\n",
-      " [ 0.40010265]\n",
-      " [ 0.74149862]\n",
-      " [-1.70775669], ... , [ 1.21802717]\n",
-      " [ 0.40288299]\n",
-      " [ 4.24649867]\n",
+      "[ 1.76160471e+15]\n",
+      " [-4.50692072e+15]\n",
+      " [ 7.27394101e+13]\n",
+      " [ 6.62574710e+14], ... , [-2.96030701]\n",
+      " [ 1.04582814]\n",
+      " [ 2.64891114]\n",
       " [-0.38446395]\n",
       "Error =\n",
-      " 111938.96476609966\n",
+      " 15.155075012507066\n",
       "\n",
       "\n",
       "500 500\n",
-      "[-1.16445171]\n",
-      " [-1.99336824]\n",
-      " [-0.07815743]\n",
-      " [-0.74288533], ... , [2.70578551]\n",
-      " [2.62355832]\n",
-      " [0.65785483]\n",
-      " [1.29749623]\n",
+      "[ 7.41601169e+141]\n",
+      " [-4.27114460e+142]\n",
+      " [-1.15567637e+141]\n",
+      " [ 6.22209212e+141], ... , [-3.67045535]\n",
+      " [ 1.29204355]\n",
+      " [ 0.70500787]\n",
+      " [ 1.29749623]\n",
       "Error =\n",
-      " 56175.81236228779\n",
+      " 1.9978749809209134e+128\n",
       "\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "def Ejercicio3(f_L, f_b):\n",
-    "    \"\"\" Programa para ejecutar el ejercicio 2. espera el nombre\n",
+    "def Ejercicio3(f_U, f_b):\n",
+    "    \"\"\" Programa para ejecutar el ejercicio 3. espera el nombre\n",
     "    de los archivos de la matriz y el vector soluciones para \n",
     "    funcionar.\n",
     "    \"\"\"\n",
-    "    U = readFile(f_L)\n",
+    "    U = readFile(f_U)\n",
     "    b = readFile(f_b)\n",
     "    dtype = np.float64\n",
     "    t = (2.2e-16)**(2/3) # De la tarea 1 y como estamos usando flaot64\n",
@@ -475,6 +523,29 @@
     "        Ejercicio3('matU'+str(sz), 'vecb'+str(sz))\n",
     "        print('\\n')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Como ejecutar\n",
+    "\n",
+    "#### Como ejecutar\n",
+    "Para ejecutar en consola se necesita estar en el mismo directorio que la carpeta de la tarea `datos`. Como nombre de los archivos no se espera la direccion completa ni la extension del archivo. Se infiere automatincamente que los datos sera obtenidos del subdirectorio `datos/npy` y con la extension `.npy`. De manera qu la ejecucion debe parecerse a lo siguiente\n",
+    "```console\n",
+    "python3 Tarea3.py Ejercicio3 matU5 vecb5\n",
+    "```\n",
+    "lo que debe producir la salida\n",
+    "\n",
+    "![Ejemplo ejecucion consola](assets/T3-E3.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
