--- a/MN/Tareas/T3/Tarea3.ipynb
+++ b/MN/Tareas/T3/Tarea3.ipynb
@@ -36,7 +36,7 @@
     "\n",
     "#### Si todo sale mal\n",
     "\n",
-    "<a href=\"https://colab.research.google.com/gist/BenchHPZ/...\">\n",
+    "<a href=\"https://colab.research.google.com/gist/BenchHPZ/813abd96c1dac91b038905ac85cc425c/tarea3.ipynb\">\n",
     "    <img src=\"../../../assets/colab-badge.svg\" \n",
     "         alt=\"Open In Colab\"/>\n",
     "</a>\n",
