--- a/MN/Tareas/T3/Tarea3.tex
+++ b/MN/Tareas/T3/Tarea3.tex
@@ -412,8 +412,8 @@ ejercicios desde la consola.
 \paragraph{Si todo sale mal}\label{si-todo-sale-mal}}
 
 En caso de que todo salga mal, tratare de dejar una copia disponible en
-\textbf{GoogleColab} que se pueda ejecutar con su versión de
-\textbf{Python}.
+\href{https://colab.research.google.com/gist/BenchHPZ/813abd96c1dac91b038905ac85cc425c/tarea3.ipynb}{\bf GoogleColab} que se pueda ejecutar con su versión de
+\textbf{Python}. Es imporante primero subir los archivos a la instancia local para que los pueda usar el programa.
 
 
 
