--- a/MN/Tareas/T3/Tarea3.ipynb
+++ b/MN/Tareas/T3/Tarea3.ipynb
@@ -46,11 +46,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-20T19:54:59.540220Z",
-     "start_time": "2020-09-20T19:54:59.532412Z"
+     "end_time": "2020-09-26T05:14:43.302622Z",
+     "start_time": "2020-09-26T05:14:43.289141Z"
     },
     "init_cell": true
    },
@@ -68,6 +68,7 @@
     "import sys\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "from scipy.linalg import solve_triangular\n",
     "\n",
     "notebook = True\n",
     "\n",
@@ -175,11 +176,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-20T16:11:26.804017Z",
-     "start_time": "2020-09-20T16:11:26.794668Z"
+     "end_time": "2020-09-26T04:39:36.441360Z",
+     "start_time": "2020-09-26T04:39:35.189864Z"
     },
     "code_folding": [
      0,
@@ -189,7 +190,7 @@
    },
    "outputs": [],
    "source": [
-    "def show1D( x,sz,/, max_sz=8, prnt=True):\n",
+    "def show1D( x,sz,/, max_sz=8, show=True):\n",
     "    \"\"\" Funcion que recibe un arreglo 1D y, en caso de\n",
     "    que no sea muy grande, lo imprime en pantalla. En\n",
     "    caso de que lo sea, imprime datos representativos.\n",
@@ -222,17 +223,17 @@
     "        ret += ', ... , '\n",
     "        ret += str(x[-mid:])[1:-1]\n",
     "    \n",
-    "    if prnt: print(ret)\n",
+    "    if show: print(ret)\n",
     "    return ret       "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-20T16:11:26.875687Z",
-     "start_time": "2020-09-20T16:11:26.809061Z"
+     "end_time": "2020-09-26T04:39:36.511105Z",
+     "start_time": "2020-09-26T04:39:36.444887Z"
     },
     "code_folding": []
    },
@@ -279,16 +280,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-20T16:11:27.168524Z",
-     "start_time": "2020-09-20T16:11:26.878491Z"
+     "end_time": "2020-09-26T04:39:37.214791Z",
+     "start_time": "2020-09-26T04:39:36.512726Z"
     },
-    "code_folding": [
-     0,
-     18
-    ]
+    "code_folding": []
    },
    "outputs": [
     {
@@ -387,25 +385,25 @@
     "lo que debe producir la salida\n",
     "\n",
     "![Ejemplo ejecucion consola](assets/T3-E2.png)\n",
-    "\n",
-    "#### Otros\n",
-    "[Norma de Numpy](https://numpy.org/doc/stable/reference/generated/numpy.linalg.norm.html)"
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ejercicio 3"
+    "## Ejercicio 3\n",
+    "\n",
+    "[Norma de Numpy](https://numpy.org/doc/stable/reference/generated/numpy.linalg.norm.html)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-20T16:11:27.182070Z",
-     "start_time": "2020-09-20T16:11:27.171442Z"
+     "end_time": "2020-09-26T04:47:31.057738Z",
+     "start_time": "2020-09-26T04:47:31.042304Z"
     },
     "code_folding": []
    },
@@ -449,13 +447,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-20T16:13:53.636328Z",
-     "start_time": "2020-09-20T16:13:53.448293Z"
+     "end_time": "2020-09-26T04:47:32.243890Z",
+     "start_time": "2020-09-26T04:47:32.094575Z"
     },
-    "code_folding": []
+    "code_folding": [],
+    "collapsed": true
    },
    "outputs": [
     {
@@ -496,6 +495,7 @@
     }
    ],
    "source": [
+    "\n",
     "def Ejercicio3(f_U, f_b):\n",
     "    \"\"\" Programa para ejecutar el ejercicio 3. espera el nombre\n",
     "    de los archivos de la matriz y el vector soluciones para \n",
@@ -525,12 +525,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-09-26T05:18:15.939801Z",
+     "start_time": "2020-09-26T05:18:15.926239Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.float64"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "U = readFile('matU50')\n",
+    "b = readFile('vecb50').transpose()\n",
+    "\n",
+    "backwardSubstitution2 = lambda a,b: solve_triangular(a, b, lower=False)\n",
+    "\n",
+    "type(backwardSubstitution2(U, b)[0,0])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### Como ejecutar\n",
     "\n",
-    "#### Como ejecutar\n",
     "Para ejecutar en consola se necesita estar en el mismo directorio que la carpeta de la tarea `datos`. Como nombre de los archivos no se espera la direccion completa ni la extension del archivo. Se infiere automatincamente que los datos sera obtenidos del subdirectorio `datos/npy` y con la extension `.npy`. De manera qu la ejecucion debe parecerse a lo siguiente\n",
     "```console\n",
     "python3 Tarea3.py Ejercicio3 matU5 vecb5\n",
