Actualizacion de IAyTC (Paso el primer examen) Entrega de T4 en MN

--- a/MN/Tareas/T4/Tarea4.ipynb
+++ b/MN/Tareas/T4/Tarea4.ipynb
@@ -36,7 +36,7 @@
     "\n",
     "#### Si todo sale mal\n",
     "\n",
-    "<a href=\"https://colab.research.google.com/gist/BenchHPZ/813abd96c1dac91b038905ac85cc425c/tarea3.ipynb\">\n",
+    "<a href=\"https://colab.research.google.com/gist/BenchHPZ/3e3a54ddefcd31969b2440764ccc4f58/tarea4.ipynb\">\n",
     "    <img src=\"../../../assets/colab-badge.svg\" \n",
     "         alt=\"Open In Colab\"/>\n",
     "</a>\n",
@@ -46,11 +46,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-27T08:24:57.664847Z",
-     "start_time": "2020-09-27T08:24:57.655576Z"
+     "end_time": "2020-09-27T09:13:09.687296Z",
+     "start_time": "2020-09-27T09:12:26.766Z"
     },
     "init_cell": true
    },
@@ -114,8 +114,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-27T08:24:57.776649Z",
-     "start_time": "2020-09-27T08:24:57.668089Z"
+     "end_time": "2020-09-27T09:12:27.449611Z",
+     "start_time": "2020-09-27T09:12:26.886429Z"
     },
     "code_folding": [
      0,
@@ -215,8 +215,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-27T08:24:58.178621Z",
-     "start_time": "2020-09-27T08:24:57.780841Z"
+     "end_time": "2020-09-27T09:12:27.541129Z",
+     "start_time": "2020-09-27T09:12:27.456345Z"
     },
     "code_folding": []
    },
@@ -276,8 +276,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-27T08:24:58.247532Z",
-     "start_time": "2020-09-27T08:24:58.181533Z"
+     "end_time": "2020-09-27T09:12:27.614045Z",
+     "start_time": "2020-09-27T09:12:27.543097Z"
     },
     "code_folding": [
      0
@@ -315,8 +315,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-27T08:24:58.335637Z",
-     "start_time": "2020-09-27T08:24:58.249231Z"
+     "end_time": "2020-09-27T09:12:27.702451Z",
+     "start_time": "2020-09-27T09:12:27.616417Z"
     },
     "code_folding": [
      0,
@@ -411,8 +411,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-27T08:25:27.944257Z",
-     "start_time": "2020-09-27T08:24:58.337629Z"
+     "end_time": "2020-09-27T09:12:57.560927Z",
+     "start_time": "2020-09-27T09:12:27.705801Z"
     },
     "code_folding": [
      0
@@ -495,11 +495,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-27T08:31:51.264655Z",
-     "start_time": "2020-09-27T08:31:51.252366Z"
+     "end_time": "2020-09-27T09:12:57.577351Z",
+     "start_time": "2020-09-27T09:12:57.566228Z"
     },
     "code_folding": []
    },
@@ -539,11 +539,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-27T08:31:52.478996Z",
-     "start_time": "2020-09-27T08:31:52.474178Z"
+     "end_time": "2020-09-27T09:12:57.676522Z",
+     "start_time": "2020-09-27T09:12:57.581008Z"
     },
     "code_folding": [
      0,
@@ -574,11 +574,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-27T08:31:52.860693Z",
-     "start_time": "2020-09-27T08:31:52.855122Z"
+     "end_time": "2020-09-27T09:12:57.747192Z",
+     "start_time": "2020-09-27T09:12:57.684916Z"
     },
     "code_folding": [
      0,
@@ -620,11 +620,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-27T08:31:53.577604Z",
-     "start_time": "2020-09-27T08:31:53.276300Z"
+     "end_time": "2020-09-27T09:37:54.979934Z",
+     "start_time": "2020-09-27T09:37:54.975288Z"
     }
    },
    "outputs": [],
@@ -649,11 +649,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-27T08:32:04.446864Z",
-     "start_time": "2020-09-27T08:31:54.113864Z"
+     "end_time": "2020-09-27T09:38:06.417511Z",
+     "start_time": "2020-09-27T09:37:55.861554Z"
     }
    },
    "outputs": [
@@ -664,47 +664,41 @@
       " Size\n",
       " A := (5, 5), b := (5, 1)\n",
       "x =>\n",
-      "[ 3081.0484097 ]\n",
-      " [-6499.54355634]\n",
-      " [-5898.43734767]\n",
-      " [-2215.32263164]\n",
-      " [-2092.459337  ]\n",
+      "[ 0.3624]\n",
+      " [ 0.6791]\n",
+      " [-0.5797]\n",
+      " [-0.0304]\n",
+      " [ 0.3828]\n",
       "Error =\n",
-      "     9.813041367486225\n",
+      "     40.499009322059315\n",
       "\n",
       "\n",
       " Size\n",
       " A := (50, 50), b := (50, 1)\n",
       "x =>\n",
-      "[ 9.66990267e+15]\n",
-      " [-2.65458392e+15]\n",
-      " [-2.04242294e+15]\n",
-      " [ 3.42632604e+15], ... , [ 1.28518615e+07]\n",
-      " [-1.11195375e+05]\n",
-      " [ 1.56146299e+05]\n",
-      " [-3.49228255e+03]\n",
+      "[0.0036419 ]\n",
+      " [0.08156319]\n",
+      " [2.02355007]\n",
+      " [1.51099294], ... , [-0.04991808]\n",
+      " [ 0.85987288]\n",
+      " [ 2.53718333]\n",
+      " [-1.5538    ]\n",
       "Error =\n",
-      "     717.0017444741419\n",
+      "     3185.3753669338757\n",
       "\n",
       "\n",
       " Size\n",
-      " A := (500, 500), b := (500, 1)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-17-4d933d506b9a>:20: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  L[j,j] = np.sqrt(A[j,j] - sum([L[j,k]**2 for k in range(j)]))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Err: array must not contain infs or NaNs\n",
-      "La matriz es singular\n",
+      " A := (500, 500), b := (500, 1)\n",
+      "x =>\n",
+      "[ 1.]\n",
+      " [-2.]\n",
+      " [ 3.]\n",
+      " [-1.], ... , [ 2.]\n",
+      " [-3.]\n",
+      " [ 1.]\n",
+      " [-2.]\n",
+      "Error =\n",
+      "     457091.5347931374\n",
       "\n",
       "\n"
      ]
