--- a/MN/Tareas/T3/Tarea3.ipynb
+++ b/MN/Tareas/T3/Tarea3.ipynb
@@ -49,8 +49,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-04T05:33:08.448497Z",
-     "start_time": "2020-10-04T05:33:07.868173Z"
+     "end_time": "2020-10-04T17:24:38.423233Z",
+     "start_time": "2020-10-04T17:24:37.403908Z"
     },
     "init_cell": true
    },
@@ -86,10 +86,7 @@
     "        elif ejercicio == 'ejercicio3':\n",
     "            print(Ejercicio3( sys.argv[2], sys.argv[3]))\n",
     "        else:\n",
-    "            print(')= ... =(')\n",
-    "\n",
-    "if notebook:\n",
-    "    print(\"Todo bien con la importacion xD\")"
+    "            print(')= ... =(')"
    ]
   },
   {
