commit por segui\ridad

--- a/MN/Tareas/T2/Tarea2.ipynb
+++ b/MN/Tareas/T2/Tarea2.ipynb
@@ -49,8 +49,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-18T04:13:58.842582Z",
-     "start_time": "2020-09-18T04:13:55.021936Z"
+     "end_time": "2020-10-06T15:15:02.099082Z",
+     "start_time": "2020-10-06T15:15:01.739505Z"
     },
     "init_cell": true
    },
@@ -325,8 +325,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-18T04:13:58.862710Z",
-     "start_time": "2020-09-18T04:13:58.846637Z"
+     "end_time": "2020-10-06T15:15:02.271170Z",
+     "start_time": "2020-10-06T15:15:02.103387Z"
     },
     "code_folding": [
      1,
@@ -614,11 +614,10 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-18T04:13:58.984601Z",
-     "start_time": "2020-09-18T04:13:58.865407Z"
+     "end_time": "2020-10-06T15:15:02.877125Z",
+     "start_time": "2020-10-06T15:15:02.272725Z"
     },
     "code_folding": [
-     1,
      5,
      19,
      25
@@ -645,13 +644,13 @@
     "        return sum([coef[n]*x**(grado-n) for n in range(grado+1)])\n",
     "        \n",
     "    return f\n",
-    "####\n",
+    "\n",
     "def eta_Teorema1(coef):\n",
     "    \"\"\" Funcion que calcula la variable eta del \n",
     "    Teorema 1\n",
     "    \"\"\"\n",
     "    return max([abs(ak/coef[0]) for ak in coef[1:]])\n",
-    "####\n",
+    "\n",
     "def Teorema1(f, eta,/, metodo=metodo_secante):\n",
     "    \"\"\" Impementacion de los conceptos del Teorema 1. \n",
     "        \n",
@@ -805,8 +804,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-18T04:13:59.071388Z",
-     "start_time": "2020-09-18T04:13:58.987422Z"
+     "end_time": "2020-10-06T15:15:03.000316Z",
+     "start_time": "2020-10-06T15:15:02.879529Z"
     },
     "code_folding": [
      4,
@@ -851,9 +850,7 @@
      "end_time": "2020-09-13T23:46:35.554206Z",
      "start_time": "2020-09-13T23:46:35.066313Z"
     },
-    "code_folding": [
-     1
-    ]
+    "code_folding": []
    },
    "outputs": [
     {
@@ -997,7 +994,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ejercicio 5"
+    "### Como ejecutar"
    ]
   },
   {
