--- a/MN/Tareas/T4/Tarea4.ipynb
+++ b/MN/Tareas/T4/Tarea4.ipynb
@@ -46,11 +46,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-04T17:25:19.160982Z",
-     "start_time": "2020-10-04T17:25:18.793874Z"
+     "end_time": "2020-10-06T17:24:13.641573Z",
+     "start_time": "2020-10-06T17:24:13.634055Z"
     },
     "init_cell": true
    },
@@ -547,7 +547,6 @@
     },
     "code_folding": [
      0,
-     2,
      5
     ]
    },
@@ -574,14 +573,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-27T09:12:57.747192Z",
-     "start_time": "2020-09-27T09:12:57.684916Z"
+     "end_time": "2020-10-06T17:24:40.234002Z",
+     "start_time": "2020-10-06T17:24:40.221579Z"
     },
     "code_folding": [
-     0,
      10,
      16
     ]
@@ -590,7 +588,7 @@
    "source": [
     "# Parte 3\n",
     "\n",
-    "def solChol( A, n, b,/, t=np.finfo(np.float64).eps, dtype=np.float64):\n",
+    "def solChol( A, n, b,/, t=None, dtype=np.float64):\n",
     "    \"\"\" Funcion para resolver con Cholesky\n",
     "    \n",
     "    Esta funcion recibira una funcion A simetrica y\n",
@@ -609,6 +607,9 @@
     "                caso se regresa el apuntador al \n",
     "                vector de respuestas\n",
     "    \"\"\"\n",
+    "    if t == None: \n",
+    "        t = np.finfo(dtype).eps\n",
+    "    \n",
     "    L = factChol(A, n, t)\n",
     "    \n",
     "    if not isinstance(L, np.ndarray):\n",
